@@ -1,0 +1,5 @@
+USER=root
+PROGRAM=/usr/sbin/gdmconfig
+SESSION=false
+FALLBACK=true
+
