@@ -1,3 +1,11 @@
+Web Feb 28 18:47:14 2001  Lee Mallabone <lee0@callnetuk.com>
+
+        * gdmconfig-pam, gdmconfig-security: New files to support
+	priviledged non-root users running gdmconfig.
+	
+	* Makefile.am, configure.in, gdm.spec.in: Add option to configure
+	to --enable-console-helper for gdmconfig.
+
 Tue Feb 27 16:44:34 2001  George Lebl <jirka@5z.com>
 
 	* config/gdm.conf.in: apply patch from Vlad Harchev <hvv@hippo.ru>
